--- a/_posts/2017-12-30-2017.md
+++ b/_posts/2017-12-30-2017.md
@@ -40,7 +40,7 @@ If you frame your solution in terms of these leverage points, it’s amazing wha
 
 > A complex system that works is invariably found to have evolved from a simple system that worked. A complex system designed from scratch never works and cannot be patched up to make it work. You have to start over with a working simple system. – John Gall   
 
-Another experience I had with this was at the [@Scale Conference](https://atscaleconference.com/videos/resiliency-testing-with-toxiproxy/). I did a talk on how we do disaster testing at Shopify. We do some things well, but Netflix are miles ahead of us. The thought that they might be in the audience made me nervous. Surprisingly after the talk, an engineer from Netflix came up to me. When I saw the logo on his shirt as he approached me, I thought ‘oh no, I misrepresented them in my talk’. Instead, he opened with: “Hey. That was really cool. We couldn’t have pulled your strategy off at Netflix.” What I realized through that conversation was that our disaster testing strategy utilized a key cultural leverage point at Shopify: we take writing tests for our software *very* seriously. If a test fails, you don’t get to ship your code. If your change doesn’t ship with code, you don’t ship your code. I’ve never been in another environment, so I didn’t realize that this might be unique at our scale (at e.g. Facebook, my understanding is that some minor test failures are tolerated for their large apps). Our solution built on top of this one observation, and worked for us as a result.
+Another experience I had with this was at the [@Scale Conference](https://atscaleconference.com/videos/resiliency-testing-with-toxiproxy/). I did a talk on how we do disaster testing at Shopify. We do some things well, but Netflix are miles ahead of us. The thought that they might be in the audience made me nervous. Surprisingly after the talk, an engineer from Netflix came up to me. When I saw the logo on his shirt as he approached me, I thought ‘oh no, I misrepresented them in my talk’. Instead, he opened with: “Hey. That was really cool. We couldn’t have pulled your strategy off at Netflix.” What I realized through that conversation was that our disaster testing strategy utilized a key cultural leverage point at Shopify: we take writing tests for our software *very* seriously. If a test fails, you don’t get to ship your code. If your change doesn’t ship with tests, you don’t ship your code. I’ve never been in another environment, so I didn’t realize that this might be unique at our scale (at e.g. Facebook, my understanding is that some minor test failures are tolerated for their large apps). Our solution built on top of this one observation, and worked for us as a result.
 
 ## Reading
 I’m continuing to read, averaging roughly a book a week. [These are the books I read this year.](https://www.goodreads.com/challenges/5493-2017-reading-challenge) I’ve continued to focus on retention and comprehension. I’d estimate that I spent around 4-5 hours a week on average on retention-related work, such as writing about the books I’ve read. I spend about as much time reading non-fiction, as I do processing it (1:1 ratio).
