--- a/_posts/2017-12-30-2017.md
+++ b/_posts/2017-12-30-2017.md
@@ -6,7 +6,7 @@ title: 2017
 Towards the end of every year, I take a moment to reflect on the arbitrary time-frame of a year. This is a stream of consciousness of some of the topics that have dominated 2017.
 
 ## Growth as a Lead
-In 2016, I started building a team to be responsible for a part of the application-level architecture of Shopify. In particular, to ensure that the blast radius of a single piece of the engine would be as small as possible. This video explains in more detail what the team has been doing since [2015](https://www.youtube.com/watch?v=N8NWDHgWA28). This is the first time I’m in charge of a team. We work on the plumbing to provide the most reliable commerce experience at scale on the planet.  The team has evolved from one team (2016), with one mission, to team of teams (2017). From about 5 people (2016), to a peak of about 11 (2017) directly or indirectly reporting into me.
+In 2016, I started building a team to be responsible for a part of the application-level architecture of Shopify. In particular, to ensure that the blast radius of a single piece of the engine would be as small as possible. To successfully build a reliable, complex system from unreliable and often unknown components. This video explains in more detail what the team has been doing since [2015](https://www.youtube.com/watch?v=N8NWDHgWA28). This is the first time I’m in charge of a team. We work on the plumbing to provide the most reliable commerce experience at scale on the planet.  The team has evolved from one team (2016), with one mission, to team of teams (2017). From about 5 people (2016), to a peak of about 11 (2017) directly or indirectly reporting into me.
 
 Doubling your team is challenging. With the growth of the team, I have to grow at least as rapidly as it, to continue to support it. In the low single digits members, I could still spend a fair amount of time writing code. In the low double digits, I find myself acting more as a project manager, coach, and manager than a developer. It is no longer responsible for me to sit down and write code, when I almost always have the opportunity to unblock someone. The hardest thing to change about yourself are the pieces that your identity builds upon. Your occupation certainly fits that bill. Gradually, mine has had to shift from a developer, to a lead of developers. I think identity is one way of explaining why the transition from individual contributor to lead is challenging. Last year, I hadn’t fully made that transition, but this year I feel that I have.
 
