--- a/_posts/2017-12-30-2017.md
+++ b/_posts/2017-12-30-2017.md
@@ -6,22 +6,22 @@ title: 2017
 Towards the end of every year, I take a moment to reflect on the arbitrary time-frame of a year. This is a stream of consciousness of some of the topics that have dominated 2017.
 
 ## Growth as a Lead
-In 2016, I started building a team to be responsible for a part of the application-level architecture of Shopify. In particular, to ensure that the blast radius of a single piece of the engine would be as small as possible. To successfully build a reliable, complex system from unreliable and often unknown components. This video explains in more detail what the team has been doing since [2015](https://www.youtube.com/watch?v=N8NWDHgWA28). This is the first time I’m in charge of a team. We work on the plumbing to provide the most reliable commerce experience at scale on the planet.  The team has evolved from one team (2016), with one mission, to team of teams (2017). From about 5 people (2016), to a peak of about 11 (2017) directly or indirectly reporting into me.
+In 2016, I started building a team to be responsible for a part of the application-level architecture of Shopify. In particular, to ensure that the blast radius of a single piece of the engine would be as small as possible. To successfully build a reliable, complex system from unreliable and often unknown components. This video explains in more detail what the team has been doing since [2015](https://www.youtube.com/watch?v=N8NWDHgWA28). This is the first time I’m in charge of a team. We work on the plumbing to provide the most reliable commerce experience at scale on the planet.  The team has evolved from one team (2016), with one mission, to a team of teams (2017). From about 5 people (2016) to a peak of about 11 (2017) directly or indirectly reporting to me.
 
-Doubling your team is challenging. With the growth of the team, I have to grow at least as rapidly as it, to continue to support it. In the low single digits members, I could still spend a fair amount of time writing code. In the low double digits, I find myself acting more as a project manager, coach, and manager than a developer. It is no longer responsible for me to sit down and write code, when I almost always have the opportunity to unblock someone. The hardest thing to change about yourself are the pieces that your identity builds upon. Your occupation certainly fits that bill. Gradually, mine has had to shift from a developer, to a lead of developers. I think identity is one way of explaining why the transition from individual contributor to lead is challenging. Last year, I hadn’t fully made that transition, but this year I feel that I have.
+Doubling your team is challenging. With the growth of the team, I have to grow at least as rapidly as it, to continue to support it. In the low single digits members, I could still spend a fair amount of time writing code. In the low double digits, I find myself acting more as a project manager, coach, and manager than a developer. It is no longer responsible for me to sit down and write code when I almost always have the opportunity to unblock someone. The hardest thing to change about yourself are the pieces that your identity builds upon. Your occupation certainly fits that bill. Gradually, mine has had to shift from a developer to a lead of developers. I think identity is one way of explaining why the transition from individual contributor to lead is challenging. Last year, I hadn’t fully made that transition, but this year I feel that I have.
 
-The explosive growth of tech companies (in our case, doubling many years) is a double-edged sword. To grow the company with the ambition of the mission (‘make commerce better’), the limiting factor quickly becomes the number of leads to support the people. If you don’t have enough leads, you can’t hire the people who do the actual work. Due to this demand for leads, sometimes you have to ask people to step up a little prematurely. I was one of those people asked prematurely, certainly. I went from something I had developed expertise in (writing software), to something I knew little about (leading a team of people and projects). It’s paramount to realize the magnitude of this transition. It’s easy to confuse success in one area, with guaranteed success in another. It’s natural to gravitate towards the things you used to be good at, rather than the skills you need to be good at. You need to keep your ego in check, too, or you end up on mount stupid (depicted below) by confusing knowledge in one domain (what you were good at) with knowledge in another (what you’re working on getting good at).
+The explosive growth of tech companies (in our case, doubling many years) is a double-edged sword. The limiting factor to growing the company with the ambition of the mission (‘make commerce better’)  becomes the number of leads to support the people. If you don’t have enough leads, you can’t hire the people who do the actual work. Due to this demand for leads, sometimes you have to ask people to step up a little prematurely. I was one of those people asked prematurely, certainly. I went from something I had developed expertise in (writing software), to something I knew little about (leading a team of people and projects). It’s paramount to realize the magnitude of this transition. It’s easy to confuse success in one area, with guaranteed success in another. It’s natural to gravitate towards the things you used to be good at, rather than the skills you need to be good at. You need to keep your ego in check, too, or you end up on mount stupid (depicted below) by confusing knowledge in one domain (what you were good at) with knowledge in another (what you’re working on getting good at).
 
 ![](/static/images/mount-stupid.png)
 
 ## Decision-Making
-As I mentioned [last year](http://sirupsen.com/2016/), the highest return on investment in leadership skills has come from reading books and articles. This year, I supplemented by going to a [workshop on decision-making](https://rethinkworkshops.com/).  That is, hands down, the best way I’ve ever spent my annual conference budget. The room was packed with mind-bogglingly smart people from a diverse set of fields such as finance, fire-fighting, and publishing. I developed some fantastic relationships as a result of the workshop that continue to pay dividends in the form of phone-calls, emails, and in-person conversations. I feel that it gave me the impetus to bring my leadership skills to the next level.
+As I mentioned [last year](http://sirupsen.com/2016/), the highest return on investment in leadership skills has come from reading books and articles. This year, I supplemented by going to a [workshop on decision-making](https://rethinkworkshops.com/).  That is hands down, the best way I’ve ever spent my annual conference budget. The room was packed with mind-bogglingly smart people from a diverse set of fields such as finance, fire-fighting, and publishing. I developed some fantastic relationships as a result of the workshop that continue to pay dividends in the form of phone-calls, emails, and in-person conversations. I feel that it gave me the impetus to bring my leadership skills to the next level.
 
 A realization from the workshop that continues to haunt me is how much time we spend cleaning up after past poor decisions. The thought of how many things could’ve been avoided with a small, strategic incision years ago makes me shiver. Most importantly, it makes me humble to the decisions we make today and their long-term ramifications. The classic problem in decision-making is that it’s easy to recognize those who own up to the day-to-day fire-fighting. What’s much harder to appreciate are the people who make the proactive decisions. The decisions that are so good, we don’t even think about them anymore. Those that continue to provide leverage as people build on top of them. 
 
-As an example of a brilliant proactive decision, years ago a couple of co-workers,  proposed a 2-day project to rewrite our internal chat bot in a programming language much more widespread in the organization (Ruby). The skeptics came out of the woodwork, saying it’d be a bunch of duplicate work porting the entire code-base to Ruby, with little pay-off. If people wanted to write a new chat command, surely, they’d figure out how to use the previous system. Nonetheless, we went through with it because we saw the long-term leverage of using the same environment. Today, it’s the repository we see the most cross-company contributions to after the main Shopify application. The system is world class and aids us in tasks of immense complexity (and danger): failing over entire data-centers, [assisting with incidents](https://www.usenix.org/conference/srecon17europe/program/presentation/niyonkuru) (did you remember to update the status page?), and managing on-call schedules.
+As an example of a brilliant proactive decision, years ago a couple of co-workers,  proposed a 2-day project to rewrite our internal chatbot in a programming language much more widespread in the organization (Ruby). The skeptics came out of the woodwork, saying it’d be a bunch of duplicate work porting the entire code-base to Ruby, with little pay-off. If people wanted to write a new chat command, surely, they’d figure out how to use the previous system. Nonetheless, we went through with it because we saw the long-term leverage of using the same environment. Today, it’s the repository we see the most cross-company contributions to after the main Shopify application. The system is world class and aids us in tasks of immense complexity (and danger): failing over entire data-centers, [assisting with incidents](https://www.usenix.org/conference/srecon17europe/program/presentation/niyonkuru) (did you remember to update the status page?), and managing on-call schedules.
 
-We don’t pay enough attention to rewarding those decisions proactively, because it’s much harder than recognizing the person who own up to their mistakes. That’s important, too, but I’m more interested in striving to make the decisions that don’t have that negative leverage. In the second half of this year, I’ve spent more time with the people on my team analyzing good and bad past decisions. The best method I’ve found is to entertain a present day where a decision months or years ago wasn’t made, or was made differently. Then fast-forward to today. Did it result in a better, or worse present-day? How much leverage did the decision end up having? I hope a future exists where more people will keep a [decision journal](https://www.farnamstreetblog.com/2014/02/decision-journal/) to provide a feedback loop. There’s few things higher that’ll pay off more than improving how you make decisions, a practise that transcends fields better than most skills.
+We don’t pay enough attention to rewarding those decisions proactively because it’s much harder than recognizing the person who own up to their mistakes. That’s important, too, but I’m more interested in striving to make the decisions that don’t have that negative leverage. In the second half of this year, I’ve spent more time with the people on my team analyzing good and bad past decisions. The best method I’ve found is to entertain a present day where a decision months or years ago wasn’t made, or was made differently. Then fast-forward to today. Did it result in a better, or worse present-day? How much leverage did the decision end up having? I hope a future exists where more people will keep a [decision journal](https://www.farnamstreetblog.com/2014/02/decision-journal/) to provide a feedback loop. There’s few things higher that’ll pay off more than improving how you make decisions, a practice that transcends fields better than most skills.
 
 Overall, it’s humbling how big of a difference your decision-making process can make. I’ve spent the better part of this year becoming increasingly familiar with the cognitive biases that limit our decision-making. The best decision-making books I’ve read this year are:
 
@@ -40,7 +40,7 @@ If you frame your solution in terms of these leverage points, it’s amazing wha
 
 > A complex system that works is invariably found to have evolved from a simple system that worked. A complex system designed from scratch never works and cannot be patched up to make it work. You have to start over with a working simple system. – John Gall   
 
-Another experience I had with this was at the [@Scale Conference](https://atscaleconference.com/videos/resiliency-testing-with-toxiproxy/). I did a talk on how we do disaster testing at Shopify. We do some things well, but Netflix are miles ahead of us. The thought that they might be in the audience made me nervous. Surprisingly after the talk, an engineer from Netflix came up to me. When I saw the logo on his shirt as he approached me, I thought ‘oh no, I misrepresented them in my talk’. Instead, he opened with: “Hey. That was really cool. We couldn’t have pulled your strategy off at Netflix.” What I realized through that conversation was that our disaster testing strategy utilized a key cultural leverage point at Shopify: we take writing tests for our software *very* seriously. If a test fails, you don’t get to ship your code. If your change doesn’t ship with tests, you don’t ship your code. I’ve never been in another environment, so I didn’t realize that this might be unique at our scale (at e.g. Facebook, my understanding is that some minor test failures are tolerated for their large apps). Our solution built on top of this one observation, and worked for us as a result.
+Another experience I had with this was at the [@Scale Conference](https://atscaleconference.com/videos/resiliency-testing-with-toxiproxy/). I did a talk on how we do disaster testing at Shopify. We do some things well, but Netflix is miles ahead of us. The thought that they might be in the audience made me nervous. Surprisingly after the talk, an engineer from Netflix came up to me. When I saw the logo on his shirt as he approached me, I thought ‘oh no, I misrepresented them in my talk.’ Instead, he opened with: “Hey. That was really cool. We couldn’t have pulled your strategy off at Netflix.” What I realized through that conversation was that our disaster testing strategy utilized a key cultural leverage point at Shopify: we take writing tests for our software *very* seriously. If a test fails, you don’t get to ship your code. If your change doesn’t ship with tests, you don’t ship your code. I’ve never been in another environment, so I didn’t realize that this might be unique at our scale (at e.g., Facebook, my understanding is that some minor test failures are tolerated for their large apps). Our solution built on top of this one observation and worked for us as a result.
 
 ## Reading
 I’m continuing to read, averaging roughly a book a week. [These are the books I read this year.](https://www.goodreads.com/challenges/5493-2017-reading-challenge) I’ve continued to focus on retention and comprehension. I’d estimate that I spent around 4-5 hours a week on average on retention-related work, such as writing about the books I’ve read. I spend about as much time reading non-fiction, as I do processing it (1:1 ratio).
@@ -57,7 +57,7 @@ In the late fall, I devised a symbol that I’d put under each review date to in
 * **Co**. This means I had a conversation with someone about the idea.
 * **R**. This means I recorded a 4-6 minute voice memo on my phone talking about this idea. These recordings I listen to on a spaced repetition schedule (a voice flash-card). I just completed working on an application that’ll serve the voice memos as a Podcast feed to fit this into existing workflows.
 * **C**. This means I added the card to a situational checklist, see later section.
-* **Pv**. This means I attempted to associate the idea with an everyday object. I realized the power of this because every time I look at my closet I think of a story someone told me. If I could nudge myself to think of placing a tripwire every time I’d see a urinal, or how incentives plays into the problem at hand every time I see an apple—that might be useful.
+* **Pv**. This means I attempted to associate the idea with an everyday object. I realized the power of this because every time I look at my closet, I think of a story someone told me. If I could nudge myself to think of placing a tripwire every time I’d see a urinal, or how incentives play into the problem at hand every time I see an apple—that might be useful.
 * **Fv**. Create a flash card with a strong visual for the concept (e.g. a carrot for incentives, domino for thinking about [second-order effects](https://www.farnamstreetblog.com/2016/04/second-level-thinking/), and [a plane to think about survivorship bias)](https://en.wikipedia.org/wiki/Survivorship_bias#In_the_military).
 
 On the card above, you can see such a card with these annotations from the book [Nudge](https://en.wikipedia.org/wiki/Nudge_(book)):
@@ -69,7 +69,7 @@ My reading workflow at this point looks something like this:
 1. **Identify**. I pick the next book to read from my Airtable of books mapped to categories and people who’ve endorsed it. If people I talk to regularly are currently reading it, I’ll bump the priority since it means I can have conversations about it to aid absorption.
 2. **Read**. I read the book on my Kindle, using a few methods I’ve picked up here and there.
 	1. **Highlights and Notes.** I use highlights to highlight the key points for summarizing and reflecting on later. Things that’d be useful to note on index cards, if I don’t have them handy. Often times I’ll write the index cards *while* reading.
-	2. **Construct Memory Palaces.** Since focusing more on memory practises, I construct memory palaces with the key ideas from the book. This means I can keep going back and forth in the book in my head and relate the ideas to each other.
+	2. **Construct Memory Palaces.** Since focusing more on memory practices, I construct memory palaces with the key ideas from the book. This means I can keep going back and forth in the book in my head and relate the ideas to each other.
 	3. **Skimming.** In especially business books, I don’t always read all the chapters. I typically read the first few and last few pages of each chapter. If it’s intriguing, I’ll read the whole thing, but if it’s not, I have no issue skipping it if I feel that it’s not interesting enough or if the bookends of the chapter summarize it well.
 3. **Leave it.** I typically leave the book for at least a week before going back to it to reflect.
 4. **Create index cards.** At this point, I’ll create index cards from the key ideas, assisted by the highlights. I use the Kindle app for Mac to help me browse through them rapidly.
@@ -78,7 +78,7 @@ My reading workflow at this point looks something like this:
 At this point, the ideas live on from the book in the form of index cards in the system above, periodically reviewed for the ideas to make the jump from text to real-life.
 
 ## Situational Checklists
-With the overwhelming amount of index cards, I’ve started to see the limitations of associating cards individually with contexts where the idea noted is useful. For example, I have cultivated an association between pros and cons lists to asking the questions of: “Did we launch into analysis prematurely?”, because launching into pros and cons lists prematurely can inject analysis into something and legitimize it too early. Similarly, before making most decisions I ask myself: “What would change your mind about this?”, to identify the core assumptions. However, the number of associations is starting to be overwhelming resulting in only the most frequently used ones coming to mind. Typically that’s not more than 3-4, when in reality, often one or two dozen are useful in certain situations. Probably the same mechanic that protects me from having 1,000s memories coming to mind every time I look at a table.
+With the overwhelming amount of index cards, I’ve started to see the limitations of associating cards individually with contexts where the idea noted is useful. For example, I have cultivated an association between pros and cons lists to asking the questions of: “Did we launch into analysis prematurely?”, because launching into pros and cons lists prematurely can inject analysis into something and legitimize it too early. Similarly, before making most decisions, I ask myself: “What would change your mind about this?”, to identify the core assumptions. However, the number of associations is starting to be overwhelming resulting in only the most frequently used ones coming to mind. Typically that’s not more than 3-4, when in reality, often one or two dozen are useful in certain situations. Probably the same mechanic that protects me from having 1,000s memories coming to mind every time I look at a table.
 
 While reading [Principles](http://principles.com/), I read about the “Coach App”. The idea is to open the app to search for the situation and it’ll provide you with a checklist of what to consider. I’ve started creating my own situational checklists, an excerpt is below:
 
@@ -87,18 +87,18 @@ While reading [Principles](http://principles.com/), I read about the “Coach Ap
 Some of these have been quite useful. Many of them are blank, helping me figure out where to spend more time directing effort. These lists evolve as I read, reflect, and receive feedback to avoid repeating mistakes.
 
 ## Memory
-One of the problems with the situational checklists is that they’re in an app. Some of them have 30+ points. These are well-curated and useful. Unfortunately, cutting is no longer an option. They are distilled already. These are all valuable points. Pulling up the app in these situations is tedious. Many of the questions don’t apply to all situations. It’s just too slow and doesn’t get done often enough. Every time I do, however, I am better for it—almost always something new surfaces when it’s one of the more adorned lists. I wanted a better way.
+One of the problems with the situational checklists is that they’re in an app. Some of them have 30+ points. These are well-curated and useful. Unfortunately, cutting is no longer an option. They are already distilled. These are all valuable points. Pulling up the app in these situations is tedious. Many of the questions don’t apply to all situations. It’s just too slow and doesn’t get done often enough. Every time I do, however, I am better for it—almost always something new surfaces when it’s one of the more adorned lists. I wanted a better way.
 
-Towards the end of the year, I took a few weeks to focus on memory. I’d heard of the practise of memory palaces for years, but hadn’t figured out how to incorporate them into my life. With these checklists, it seemed the perfect opportunity. If I could build a palace for each list to retain it and train myself to run through them quickly, that could be what I was searching for. I wanted to install these lists into my head.
+Towards the end of the year, I took a few weeks to focus on memory. I’d heard of the practice of memory palaces for years but hadn’t figured out how to incorporate them into my life. With these checklists, it seemed the perfect opportunity. If I could build a palace for each list to retain it and train myself to run through them quickly, that could be what I was searching for. I wanted to install these lists into my head.
 
-I’m only one list and a few weeks in, but I have a feeling this’ll pay off handsomely in 2018. You can read more about this idea [from my review of a book on memory](https://www.goodreads.com/review/show/2221032060?book_show_action=false).
+I’m only one list and a few weeks in, but I have a feeling this will pay off handsomely in 2018. You can read more about this idea [from my review of a book on memory](https://www.goodreads.com/review/show/2221032060?book_show_action=false).
 
 ## Cooking
-Since last year, my cooking has centered around cooking from many different countries. I’ve continued, and developed culinary affections for many countries such as Indonesia, Egypt, Israel, Iran, Brazil and Syria. This has greatly opened up the type of restaurants I attend, too. My favourite new flavour combination is hands down: walnuts, pomegranate syrup, and red peppers. It’s incredibly tasty and versatile, whether you pair it with beans, eggs, or meat. Dish of the year is [shakshuka](http://www.seriouseats.com/recipes/2016/09/shakshuka-north-african-shirred-eggs-tomato-pepper-recipe.html), drizzled with pomegranate syrup and ground walnuts. It can be done in 30-45 minutes, it’s cheap, tasty, serves every occasion, looks beautiful, and is vegetarian. 
+Since last year, my cooking has centered around cooking from many different countries. I’ve continued, and developed culinary affections for many countries such as Indonesia, Egypt, Israel, Iran, Brazil and Syria. This has greatly opened up the type of restaurants I attend, too. My favorite new flavor combination is hands down: walnuts, pomegranate syrup, and red peppers. It’s incredibly tasty and versatile, whether you pair it with beans, eggs, or meat. Dish of the year is [shakshuka](http://www.seriouseats.com/recipes/2016/09/shakshuka-north-african-shirred-eggs-tomato-pepper-recipe.html), drizzled with pomegranate syrup and ground walnuts. It can be done in 30-45 minutes, it’s cheap, tasty, serves every occasion, looks beautiful, and is vegetarian. 
 
 ![](/static/images/shakshuka.jpg)
 
-Since learning that crops for livestock occupies for [1/3 of all arable land and that livestock produces about 10-12% of greenhouse emissions](https://en.wikipedia.org/wiki/Environmental_impact_of_meat_production), I felt the need to develop a more sustainable relationship with meat. I still eat meat, but I generally try to consume mostly on special occasions, or about 2 times a week, on average. This has been an interesting constraint and has changed the way I cook at home, too. I haven’t cooked meat at home (except on a few special occasions) for the majority of the year, reserving it for going out. I plan on continuing this development throughout next year. Although, I’m likely adopting a small increase of meat on the weekends because it’s thwarted my progress on my ‘around the world cuisine’ project. Most countries’ main dishes contain meat.
+Since learning that crops for livestock occupy [1/3 of all arable land and that livestock produces about 10-12% of greenhouse emissions](https://en.wikipedia.org/wiki/Environmental_impact_of_meat_production), I felt the need to develop a more sustainable relationship with meat. I still eat meat, but I generally try to consume mostly on special occasions, or about 2 times a week, on average. This has been an interesting constraint and has changed the way I cook at home, too. I haven’t cooked meat at home (except on a few special occasions) for the majority of the year, reserving it for going out. I plan on continuing this development throughout next year. Although, I’m likely adopting a small increase of meat on the weekends because it’s thwarted my progress on my ‘around the world cuisine’ project. Most countries’ main dishes contain meat.
 
 ## Health
 My workout system hasn’t changed much this year, keeping it consistently at ~3 weight-lifting sessions per week. I haven’t added much strength this year, mostly because I wasn’t paying enough attention to the planning. Late this year, I’ve adopted a cyclic program that has me progress more consistently every month, at a more healthy pace. In my previous program, I’d try to beat the last workout’s PR every time. This often caused me to overdo it in the next workout, leaving me unable to recover for the one after, and then getting back to where I started. I hope this is the change I need to progress to the next level. I’m mostly happy with the regime here, and it keeps my base-level of shape quite good. I lack some aerobic capacity, which I’d like to look into sometime in 2018.
