--- a/_posts/2018-03-10-unk-unk.md
+++ b/_posts/2018-03-10-unk-unk.md
@@ -57,10 +57,10 @@ it was clear that there was an internal podcast *platform*, it exploded. The
 first podcast went one level deeper to provide a platform, increasing the
 surface area for positive unknown-unknowns.
 
-We will have to remain humble to the fact, that often we can’t predict all the
-nth-order effects, positive and negative. We can attempt to reason about their
-size, but we won't know for sure. There’s an old Taoist story about second-order
-effects:
+We will have to remain humble to the fact that often we can’t predict all
+effects, positive and negative. We can attempt to reason about their size, but
+we won't know for sure. There’s an old Taoist fable that we can interpret as a
+story unknown-unknown second and third-order effects:
 
 > “When an old farmer’s stallion wins a prize at a country show, his neighbour
 > calls round to congratulate him, but the old farmer says, “Who knows what is
@@ -84,11 +84,18 @@ effects:
 > neighbour thinks to himself, “Who knows what is good and what is bad?” and
 > realises that the old farmer must be a Taoist sage. ”
 
-You may look at two options for a decision that seem equally good.  Have you
-considered which one has larger optionality long-term? Third-order effects that
-you could by no means predict? With the option that you’ve chosen, have you
-considered if you can expose a nugget of platform, to take it to greater heights
-than you ever anticipated? 
+It is tempting to believe at any of the critical points in this story that you
+know what will happen next with certainty. With the most prized stallion in the
+land, riches await! Or, when stolen, that you'll never see it again.  While the
+series of events in this story seem _highly_ unlikely, it teaches us that
+effects will happen that we could never have imagined. The sum of the
+probabilities of unknown-unknowns may outweigh the knowns.
+
+You may be looking at two options for a decision that seem equally good. Have
+you considered which one has larger optionality long-term? Third-order effects
+that you could by no means predict? With a small modification, could you
+increase the surface area for unknown-unknown positives? Can you expose even a
+fraction of a platform?
 
 Considering positive unknown-unknowns has changed my mind quite a few times in
 the past year. Contemplating optionality is *not* about making decisions based
