--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -392,7 +392,7 @@ long-term memory. For the best points in the books, often a combination of
 highlights and themes, I'll create a __physical__ index card. I try as much as
 possible to draw on the card and think of references to other books.
 
-![](http://sirupsen.com/static/images/index-card.png) 
+![](/static/images/index-card.png) 
 
 __3. Reviewing index cards.__ I have two containers for my index cards. One with
 index cards that have been processed at least once (left) and one for cards that
