Link to goodreads

--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -379,7 +379,8 @@ I'll write a short summary and review and publish it on Goodreads
 ([example](https://www.goodreads.com/review/show/2417256899?book_show_action=false)).
 This forces me to extract the key lessons from the book. Typically, I'll use my
 highlights from [Readwise.io](http://readwise.io/) to assist in extracting the
-key lessons from the book and throw them into the summary.
+key lessons from the book and throw them into the summary. You can see all my
+reviews on my [Goodreads profile](https://www.goodreads.com/user/show/38623347-simon-eskildsen).
 
 ![Pasted image](https://dynalist.io/u/-8pAR7XHj8Cu_QSeiARS_IWC)
 
@@ -476,3 +477,6 @@ time. The reading habit is most important, then you start paying more attention
 to what you read, you start highlighting, you start taking notes, you start
 writing summaries, and slowly a complex system that works for you will evolve
 and evolve. I hope this can inspire you to invest more in your reading process.
+
+For book recommendations, see [my Goodreads profile](https://www.goodreads.com/user/show/38623347-simon-eskildsen)
+especially my [`reread` shelf](https://www.goodreads.com/review/list/38623347?shelf=reread).
