--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -4,11 +4,11 @@ title: How I Read
 ---
 
 Until a few years ago, I didn't spend much time reading. Today, I spend a few
-hours every week reading. My reading habit has evolved significantly over the
-past couple of years and  surely will continue to. In this post, I will describe
-how I approach my reading. You may think it's elaborate (I think that too, of
-other people's reading systems), however, keep in mind it's evolved slowly over
-the years.
+hours every week reading amounting to somewhere between 30 and 50 books a year.
+My reading habit has evolved significantly over the past couple of years and
+surely will continue to. In this post, I will describe how I approach my
+reading. You may think it's elaborate (I think that too, of other people's
+reading systems), however, keep in mind it's evolved slowly over the years.
 
 > A complex system that works is invariably found to have evolved from a simple
 > system that worked. A complex system designed from scratch never works and
