--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -4,7 +4,7 @@ title: How I Read
 ---
 
 Until a few years ago, I didn't spend much time reading. Today, I spend a few
-hours every week reading amounting to somewhere between 30 and 50 books a year.
+hours every week reading, amounting to somewhere between 30 and 50 books a year.
 My reading habit has evolved significantly over the past couple of years and
 surely will continue to. In this post, I will describe how I approach my
 reading. You may think it's elaborate (I think that too, of other people's
