--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -36,7 +36,7 @@ converts any Instapaper book links into rows in an Airtable. Endorsements from
 trusted sources will be added, too. This script will automatically add metadata
 about the book from Goodreads such as genre, year published, author, and so on.
 
-![Pasted image](https://dynalist.io/u/uuO77yFj0Pfsb6YO0fUdN6ZO) 
+[![Pasted image](https://dynalist.io/u/uuO77yFj0Pfsb6YO0fUdN6ZO)](https://dynalist.io/u/uuO77yFj0Pfsb6YO0fUdN6ZO)
 
 ### What would I like to improve about choosing?
 
